fix: 修改命令触发条件

--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
       ],
       "settingChangeMenu": [
         {
-          "when": "isWindows",
+          "when": "editorFocus",
           "command": "formatOnSaveSwitch"
         },
         {
-          "when": "isWindows",
+          "when": "editorFocus",
           "command": "workspace-setting-changer.helloWorld1"
         }
       ]
