--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "workspace-setting-changer",
   "displayName": "workspace-setting-changer",
   "description": "修改工作区setting",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "engines": {
     "vscode": "^1.70.0"
   },
@@ -24,9 +24,20 @@
       {
         "command": "workspace-setting-changer.helloWorld1",
         "title": "Hello World1（测试）"
+      },
+      {
+        "command": "workspace-setting-changer.openByBrowser",
+        "title": "在浏览器中打开"
       }
     ],
     "menus": {
+      "explorer/context": [
+        {
+          "when": "resourceLangId == html || resourceLangId == xml || resourceExtname == .pdf",
+          "command": "workspace-setting-changer.openByBrowser",
+          "group": "navigation@9"
+        }
+      ],
       "editor/context": [
         {
           "group": "2_workspace",
@@ -60,16 +71,19 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.70.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.70.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "@vscode/test-electron": "^2.1.5",
     "eslint": "^8.20.0",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
-    "typescript": "^4.7.4",
-    "@vscode/test-electron": "^2.1.5"
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "shelljs": "^0.8.5"
   }
 }
