--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
       {
         "command": "workspace-setting-changer.openByBrowser",
         "title": "在浏览器中打开"
+      },
+      {
+        "command": "workspace-setting-changer.addCommaToEveryLine",
+        "title": "在每行的最后添加逗号"
       }
     ],
     "menus": {
@@ -57,6 +61,10 @@
         {
           "when": "editorFocus",
           "command": "workspace-setting-changer.helloWorld1"
+        },
+        {
+          "when": "editorFocus",
+          "command": "workspace-setting-changer.addCommaToEveryLine"
         }
       ]
     },
